# ACPR_FrameMeter

./: .gitignore  CMakeLists.txt  Compile.sh  LICENSE  README.md  toolchain.cmake
include/baseMod/: baseMod.hpp  baseMod_c.h
include/gearLoader/: gearLoader.hpp  gearLoader_c.h  ggxxacpr.hpp  ggxxacpr_c.h
resources/: README.txt
source/: config.json  source.cpp
source/frameMeter/: circularBuffer.h  frameMeter.cpp  frameMeter.h  gameStateStore.h
source/hooks/: hooks.cpp  hooks.h
source/render/: render.cpp  render.h  text.cpp
source/settings/: modMenu.cpp  modMenu.h  settings.h
